# internal/server/openapi/openapi.yaml
@@ -7,6 +7,7 @@ info:
   version: "1.0"
 servers:
   - url: https://dash.tmpenv/api/v1
+  - url: http://localhost:8080/api/v1
 paths:
   /environment:
     post:
@@ -26,7 +27,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/server.environmentModel'
+              $ref: '#/components/schemas/previewEnvironmentModel'
         required: true
       responses:
         "200":
@@ -34,9 +35,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/server.environmentModel'
+                $ref: '#/components/schemas/previewEnvironmentModel'
         "400":
           description: Bad Request
           content:
@@ -77,7 +76,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/server.environmentModel'
+                  $ref: '#/components/schemas/previewEnvironmentModel'
         "500":
           description: Internal Server Error
           content:
@@ -109,7 +108,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/server.environmentModel'
+                $ref: '#/components/schemas/previewEnvironmentModel'
         "400":
           description: Bad Request
           content:
@@ -153,7 +152,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/server.environmentModel'
+                type: array
+                items:
+                  $ref: '#/components/schemas/previewEnvironmentInstanceModel'
         "401":
           description: Unauthorized
           content:
@@ -187,7 +188,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/server.githubRepositoryModel'
+                  $ref: '#/components/schemas/githubRepositoryModel'
         "401":
           description: Unauthorized
           content:
@@ -202,51 +203,124 @@ paths:
                 $ref: '#/components/schemas/server.httpError'
 components:
   schemas:
-    server.githubRepositoryModel:
+    previewEnvironmentModel:
       type: object
+      required:
+        - applicationSettings
+        - containerSettings
+        - gitSettings
+        - buildSettings
+        - name
+        - id
+      properties:
+        applicationSettings:
+          $ref: '#/components/schemas/applicationSettingsModel'
+        containerSettings:
+          $ref: '#/components/schemas/containerSettingsModel'
+        gitSettings:
+          $ref: '#/components/schemas/gitSettingsModel'
+        buildSettings:
+          $ref: '#/components/schemas/buildSettings'
+        name:
+          type: string
+        id:
+          type: string
+    applicationSettingsModel:
+      type: object
+      required:
+      - port
+      properties:
+        port:
+          type: integer
+        environmentVariables:
+          type: array
+          items:
+            $ref: '#/components/schemas/environmentVariableModel'
+        command:
+          type: string
+    environmentVariableModel:
+      type: object
+      required:
+      - key
+      - value
+      properties:
+        key:
+          type: string
+        value:
+          type: string
+    containerSettingsModel:
+      type: object
+      properties:
+        registry:
+          type: string
+        repository:
+          type: string
+    gitSettingsModel:
+      type: object
+      required:
+      - repository
+      - organization
+      properties:
+        repository:
+          type: string
+        organization:
+          type: string
+    buildSettings:
+      type: object
+      required:
+      - buildAllPullRequests
+      - buildAllBranches
+      properties:
+        buildAllPullRequests:
+          type: boolean
+        buildAllBranches:
+          type: boolean
+        branchWildcard:
+          type: string
+        dockerFilePath:
+          type: string
+    previewEnvironmentInstanceModel:
+      type: object
+      required:
+      - name
+      - desiredPhase
+      - ownerId
+      - previewEnvironmentId
+      - instanceGitSettings
+      properties:
+        name:
+          type: string
+        desiredPhase:
+          type: string
+        ownerId:
+          type: string
+        previewEnvironmentId:
+          type: string
+        instanceGitSettings:
+          $ref: '#/components/schemas/instanceGitSettingsModel'
+    instanceGitSettingsModel:
+      type: object
+      properties:
+        branch:
+          type: string
+        commitHash:
+          type: string
+        pullRequestIdentifier:
+          type: string
+    githubRepositoryModel:
+      type: object
+      required:
+      - name
+      - owner
       properties:
         name:
           type: string
         owner:
           type: string
-    server.applicationSettingsModel:
-      type: object
-      properties:
-        hostname:
-          type: string
-        port:
-          type: integer
-    server.containerSettingsModel:
-      type: object
-      properties:
-        image:
-          type: string
-        registry:
-          type: string
-    server.environmentModel:
-      type: object
-      properties:
-        applicationSettings:
-          $ref: '#/components/schemas/server.applicationSettingsModel'
-        containerSettings:
-          $ref: '#/components/schemas/server.containerSettingsModel'
-        gitSettings:
-          $ref: '#/components/schemas/server.gitSettingsModel'
-        name:
-          type: string
-        id:
-          type: string
-    server.gitSettingsModel:
-      type: object
-      properties:
-        organization:
-          type: string
-        repository:
-          type: string
+        
     server.httpError:
       type: object
       properties:
         message:
           type: object
-x-original-swagger-version: "2.0"
 
